feat: add api for searching similar domain name
