# internal/namegpt/router/v1.go
@@ -1,12 +1,15 @@
 package router
 
 import (
+	"github.com/copolio/namegpt/internal/namegpt/controller"
 	"github.com/gin-gonic/gin"
 )
 
 func SetV1Routes(router *gin.Engine) *gin.Engine {
-	//v1 := router.Group("/api/v1")
-	//{
-	//}
+	queryController := controller.NewQueryController()
+	v1 := router.Group("/api/v1")
+	{
+		v1.GET("/search", queryController.SearchDomainNames)
+	}
 	return router
 }
